syntax = "proto3";

package user;

option go_package = "user_service/pkg/user_service/grpc/userpb";

import "google/protobuf/empty.proto";

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UserProfile {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string password = 3; 
}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  bool authenticated = 1; 
  string token = 2;       
  int64 user_id = 3;      
  string error_message = 4; 
}

message GetUserProfileRequest {
  int64 user_id = 1; 


service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (User);

  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);

  rpc GetUserProfile(GetUserProfileRequest) returns (UserProfile);
}